fix: improve color contrast ratio on role text in dark theme

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -19,7 +19,7 @@ $themes: (
   dark: (
     color-dark: #f5f5f5,
     color-gray-medium: #aaa,
-    color-gray-light: #888,
+    color-gray-light: #bbb,
     color-light: #222,
     color-white: #111,
     color-primary: #f6f,
